[project]
name = "hugr"
version = "0.14.4"
requires-python = ">=3.10"
description = "Quantinuum's common representation for quantum programs"
license = { file = "LICENCE" }
readme = "README.md"
authors = [
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
maintainers = [
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "graphviz>=0.20.3",
    "pydantic~=2.8",
    "pydantic-extra-types~=2.9",
    "semver~=3.0",
    "typing-extensions~=4.12",
    "pyzstd~=0.18.0",
]


[project.scripts]
hugr = "hugr._hugr:run_cli"

[project.optional-dependencies]
docs = ["sphinx>=8.1.3,<9.0.0", "furo"]
pytket = ["pytket >= 1.34.0"]

[project.urls]
homepage = "https://github.com/quantinuum/hugr/tree/main/hugr-py"
repository = "https://github.com/quantinuum/hugr/tree/main/hugr-py"

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Make sure to copy any changes to the root `pyproject.toml` config too.
module-name = "hugr._hugr"
python-source = "src/"
manifest-path = "Cargo.toml"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
# custom profile with extra optimisations
profile = "release-py"

[tool.pyright]
# Rust bindings have typing stubs but no python source code.
reportMissingModuleSource = "none"
