[package]
name = "hugr-sexpr-derive"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["proc-macro"] }
quote = { version = "1.0", features = ["proc-macro"] }
syn = { version = "2.0", features = ["clone-impls", "derive", "parsing", "printing", "proc-macro"] }

[lints]
workspace = true
