[package]
name = "hugr"
version = "0.14.3"
edition = { workspace = true }
rust-version = { workspace = true }

license = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/hugr/"
homepage = { workspace = true }
repository = { workspace = true }
description = "Quantinuum's Hierarchical Unified Graph Representation"
keywords = ["Quantum", "Quantinuum"]
categories = ["compilers"]

[lints]
workspace = true

[lib]
name = "hugr"
bench = false
path = "src/lib.rs"

[features]
extension_inference = ["hugr-core/extension_inference"]
declarative = ["hugr-core/declarative"]
model_unstable = ["hugr-core/model_unstable", "hugr-model"]
llvm = ["hugr-llvm/llvm14-0"]
llvm-test = ["hugr-llvm/llvm14-0", "hugr-llvm/test-utils"]

[dependencies]
hugr-model = { path = "../hugr-model", optional = true, version = "0.17.1" }
hugr-core = { path = "../hugr-core", version = "0.14.3" }
hugr-passes = { path = "../hugr-passes", version = "0.14.3" }
hugr-llvm = { path = "../hugr-llvm", version = "0.14.3", optional = true }

[dev-dependencies]
rstest = { workspace = true }
lazy_static = { workspace = true }
serde_json = { workspace = true }
bumpalo = { workspace = true, features = ["collections"] }

criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench_main"
harness = false
