[package]
name = "hugr"
version = "0.24.0"
edition = { workspace = true }
rust-version = { workspace = true }

license = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/hugr/"
homepage = { workspace = true }
repository = { workspace = true }
description = "Quantinuum's Hierarchical Unified Graph Representation"
keywords = ["Quantum", "Quantinuum"]
categories = ["compilers"]

[lints]
workspace = true

[lib]
name = "hugr"
bench = false
path = "src/lib.rs"

[features]
default = ["zstd"]

declarative = ["hugr-core/declarative"]
llvm = ["hugr-llvm/llvm14-0"]
llvm-test = ["hugr-llvm/llvm14-0", "hugr-llvm/test-utils"]
zstd = ["hugr-core/zstd"]
persistent_unstable = ["hugr-persistent"]

[dependencies]
hugr-model = { path = "../hugr-model", version = "0.24.0" }
hugr-core = { path = "../hugr-core", version = "0.24.0" }
hugr-passes = { path = "../hugr-passes", version = "0.24.0" }
hugr-llvm = { path = "../hugr-llvm", version = "0.24.0", optional = true }
hugr-persistent = { path = "../hugr-persistent", version = "0.3.1", optional = true }

[dev-dependencies]
serde_json = { workspace = true }
bumpalo = { workspace = true, features = ["collections"] }

# Defined here so it can be overridden by the codspeed CI job
# using `cargo add`.
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "bench_main"
harness = false
