[tool.poetry]
name = "quantinuum_hugr"
version = "0.0.0"
description = "Quantinuum's common representation of quantum circuits and operations"
classifiers = []                                                                      # TODO
keywords = []                                                                         # TODO
authors = []                                                                          # TODO
maintainers = []                                                                      # TODO
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/CQCL/hugr"
repository = "https://github.com/CQCL/hugr"

[tool.poetry.dependencies]
python = ">=3.10"

[tool.pytest.ini_options]
# Lark throws deprecation warnings for `src_parse` and `src_constants`.
filterwarnings = "ignore::DeprecationWarning:lark.*"
